app/Tiger/TigerParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from TigerParser.y
-----------------------------------------------------------------------------

state 16 contains 1 shift/reduce conflicts.
state 24 contains 2 reduce/reduce conflicts.
state 27 contains 3 shift/reduce conflicts.
state 45 contains 12 shift/reduce conflicts.
state 46 contains 12 shift/reduce conflicts.
state 47 contains 12 shift/reduce conflicts.
state 48 contains 12 shift/reduce conflicts.
state 49 contains 12 shift/reduce conflicts.
state 50 contains 12 shift/reduce conflicts.
state 51 contains 12 shift/reduce conflicts.
state 52 contains 12 shift/reduce conflicts.
state 53 contains 12 shift/reduce conflicts.
state 54 contains 12 shift/reduce conflicts.
state 55 contains 12 shift/reduce conflicts.
state 56 contains 12 shift/reduce conflicts.
state 57 contains 12 shift/reduce conflicts.
state 64 contains 1 shift/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 72 contains 1 shift/reduce conflicts.
state 76 contains 2 shift/reduce conflicts.
state 87 contains 13 shift/reduce conflicts.
state 95 contains 12 shift/reduce conflicts.
state 109 contains 12 shift/reduce conflicts.
state 110 contains 12 shift/reduce conflicts.
state 132 contains 12 shift/reduce conflicts.

rule 35 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_tigerParser -> program                      (0)
	program -> exp                                     (1)
	exp -> lvalue                                      (2)
	exp -> "nil"                                       (3)
	exp -> "(" ")"                                     (4)
	exp -> int_literal                                 (5)
	exp -> string_literal                              (6)
	exp -> funcall                                     (7)
	exp -> arith_exp                                   (8)
	exp -> comp_exp                                    (9)
	exp -> bool_exp                                    (10)
	exp -> record_create                               (11)
	exp -> array_create                                (12)
	exp -> lvalue ":=" exp                             (13)
	exp -> "if" exp "then" exp "else" exp              (14)
	exp -> "if" exp "then" exp                         (15)
	exp -> "while" exp "do" exp                        (16)
	exp -> "for" ident ":=" exp "to" exp "do" exp      (17)
	exp -> "break"                                     (18)
	exp -> "let" decs "in" exp "end"                   (19)
	exp -> "(" expseq ")"                              (20)
	funcall -> ident "(" explist ")"                   (21)
	arith_exp -> exp "+" exp                           (22)
	arith_exp -> exp "-" exp                           (23)
	arith_exp -> exp "*" exp                           (24)
	arith_exp -> exp "/" exp                           (25)
	comp_exp -> exp "=" exp                            (26)
	comp_exp -> exp "<>" exp                           (27)
	comp_exp -> exp "<" exp                            (28)
	comp_exp -> exp ">" exp                            (29)
	comp_exp -> exp "<=" exp                           (30)
	comp_exp -> exp ">=" exp                           (31)
	bool_exp -> exp "&" exp                            (32)
	bool_exp -> exp "|" exp                            (33)
	record_create -> ident "(" record_create_list ")"   (34)
	record_create_list ->                              (35)
	record_create_list -> record_create_field          (36)
	record_create_list -> record_create_list "," record_create_field   (37)
	record_create_field -> ident "=" exp               (38)
	array_create -> ident "[" exp "]" "of" exp         (39)
	decs ->                                            (40)
	decs -> decs dec                                   (41)
	dec -> tydeclist                                   (42)
	dec -> vardec                                      (43)
	dec -> fundeclist                                  (44)
	tydec -> "type" ident "=" ty                       (45)
	tydeclist -> tydec                                 (46)
	tydeclist -> tydeclist tydec                       (47)
	vardec -> "var" ident ":=" exp                     (48)
	vardec -> "var" ident ":" ident ":=" exp           (49)
	fundeclist ->                                      (50)
	fundeclist -> fundeclist fundec                    (51)
	fundec -> "function" ident "(" tyfields ")" "=" exp   (52)
	fundec -> "function" ident "(" tyfields ")" ":" ident "=" exp   (53)
	ty -> ident                                        (54)
	ty -> "{" tyfields "}"                             (55)
	ty -> "array" "of" ident                           (56)
	tyfield -> ident ":" ident                         (57)
	tyfields ->                                        (58)
	tyfields -> tyfield                                (59)
	tyfields -> tyfields "," tyfield                   (60)
	expseq -> exp                                      (61)
	expseq -> expseq ";" exp                           (62)
	explist ->                                         (63)
	explist -> exp                                     (64)
	explist -> explist "," exp                         (65)
	lvalue -> ident                                    (66)
	lvalue -> ident "(" exp ")"                        (67)
	lvalue -> lvalue "(" exp ")"                       (68)
	lvalue -> lvalue "." ident                         (69)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"while"        { TWhile }
	"for"          { TFor }
	"to"           { TTo }
	"break"        { TBreak }
	"let"          { TLet }
	"in"           { TIn }
	"end"          { TEnd }
	"function"     { TFunction }
	"var"          { TVar }
	"type"         { TType }
	"array"        { TArray }
	"if"           { TIf }
	"then"         { TThen }
	"else"         { TElse }
	"do"           { TDo }
	"of"           { TOf }
	"nil"          { TNil }
	ident          { TIdent $$ }
	int_literal    { TIntLit $$ }
	string_literal { TStrLit $$ }
	","            { TComma }
	":"            { TColon }
	";"            { TSemicolon }
	"("            { TLParen }
	")"            { TRParen }
	"["            { TLBracket }
	"]"            { TRBracket }
	"{"            { TLBrace }
	"}"            { TRBrace }
	"."            { TDot }
	"+"            { TPlus }
	"-"            { TMinus }
	"*"            { TTimes }
	"/"            { TDivide }
	"="            { TEq }
	"<>"           { TNeq }
	"<="           { TLe }
	">="           { TGe }
	"<"            { TLt }
	">"            { TGt }
	":="           { TAssign }
	"&"            { TAnd }
	"|"            { TOr }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_tigerParser rule  0
	program         rule  1
	exp             rules 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
	funcall         rule  21
	arith_exp       rules 22, 23, 24, 25
	comp_exp        rules 26, 27, 28, 29, 30, 31
	bool_exp        rules 32, 33
	record_create   rule  34
	record_create_list rules 35, 36, 37
	record_create_field rule  38
	array_create    rule  39
	decs            rules 40, 41
	dec             rules 42, 43, 44
	tydec           rule  45
	tydeclist       rules 46, 47
	vardec          rules 48, 49
	fundeclist      rules 50, 51
	fundec          rules 52, 53
	ty              rules 54, 55, 56
	tyfield         rule  57
	tyfields        rules 58, 59, 60
	expseq          rules 61, 62
	explist         rules 63, 64, 65
	lvalue          rules 66, 67, 68, 69

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 16
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	"("            shift, and enter state 19

	program        goto state 20
	exp            goto state 2
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	array_create   goto state 8
	lvalue         goto state 9

State 1


	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 16
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	"("            shift, and enter state 19

	exp            goto state 2
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	array_create   goto state 8
	lvalue         goto state 9

State 2

	program -> exp .                                    (rule 1)
	arith_exp -> exp . "+" exp                          (rule 22)
	arith_exp -> exp . "-" exp                          (rule 23)
	arith_exp -> exp . "*" exp                          (rule 24)
	arith_exp -> exp . "/" exp                          (rule 25)
	comp_exp -> exp . "=" exp                           (rule 26)
	comp_exp -> exp . "<>" exp                          (rule 27)
	comp_exp -> exp . "<" exp                           (rule 28)
	comp_exp -> exp . ">" exp                           (rule 29)
	comp_exp -> exp . "<=" exp                          (rule 30)
	comp_exp -> exp . ">=" exp                          (rule 31)
	bool_exp -> exp . "&" exp                           (rule 32)
	bool_exp -> exp . "|" exp                           (rule 33)

	"+"            shift, and enter state 33
	"-"            shift, and enter state 34
	"*"            shift, and enter state 35
	"/"            shift, and enter state 36
	"="            shift, and enter state 37
	"<>"           shift, and enter state 38
	"<="           shift, and enter state 39
	">="           shift, and enter state 40
	"<"            shift, and enter state 41
	">"            shift, and enter state 42
	"&"            shift, and enter state 43
	"|"            shift, and enter state 44
	%eof           reduce using rule 1


State 3

	exp -> funcall .                                    (rule 7)

	"to"           reduce using rule 7
	"in"           reduce using rule 7
	"end"          reduce using rule 7
	"function"     reduce using rule 7
	"var"          reduce using rule 7
	"type"         reduce using rule 7
	"then"         reduce using rule 7
	"else"         reduce using rule 7
	"do"           reduce using rule 7
	","            reduce using rule 7
	";"            reduce using rule 7
	")"            reduce using rule 7
	"]"            reduce using rule 7
	"+"            reduce using rule 7
	"-"            reduce using rule 7
	"*"            reduce using rule 7
	"/"            reduce using rule 7
	"="            reduce using rule 7
	"<>"           reduce using rule 7
	"<="           reduce using rule 7
	">="           reduce using rule 7
	"<"            reduce using rule 7
	">"            reduce using rule 7
	"&"            reduce using rule 7
	"|"            reduce using rule 7
	%eof           reduce using rule 7


State 4

	exp -> arith_exp .                                  (rule 8)

	"to"           reduce using rule 8
	"in"           reduce using rule 8
	"end"          reduce using rule 8
	"function"     reduce using rule 8
	"var"          reduce using rule 8
	"type"         reduce using rule 8
	"then"         reduce using rule 8
	"else"         reduce using rule 8
	"do"           reduce using rule 8
	","            reduce using rule 8
	";"            reduce using rule 8
	")"            reduce using rule 8
	"]"            reduce using rule 8
	"+"            reduce using rule 8
	"-"            reduce using rule 8
	"*"            reduce using rule 8
	"/"            reduce using rule 8
	"="            reduce using rule 8
	"<>"           reduce using rule 8
	"<="           reduce using rule 8
	">="           reduce using rule 8
	"<"            reduce using rule 8
	">"            reduce using rule 8
	"&"            reduce using rule 8
	"|"            reduce using rule 8
	%eof           reduce using rule 8


State 5

	exp -> comp_exp .                                   (rule 9)

	"to"           reduce using rule 9
	"in"           reduce using rule 9
	"end"          reduce using rule 9
	"function"     reduce using rule 9
	"var"          reduce using rule 9
	"type"         reduce using rule 9
	"then"         reduce using rule 9
	"else"         reduce using rule 9
	"do"           reduce using rule 9
	","            reduce using rule 9
	";"            reduce using rule 9
	")"            reduce using rule 9
	"]"            reduce using rule 9
	"+"            reduce using rule 9
	"-"            reduce using rule 9
	"*"            reduce using rule 9
	"/"            reduce using rule 9
	"="            reduce using rule 9
	"<>"           reduce using rule 9
	"<="           reduce using rule 9
	">="           reduce using rule 9
	"<"            reduce using rule 9
	">"            reduce using rule 9
	"&"            reduce using rule 9
	"|"            reduce using rule 9
	%eof           reduce using rule 9


State 6

	exp -> bool_exp .                                   (rule 10)

	"to"           reduce using rule 10
	"in"           reduce using rule 10
	"end"          reduce using rule 10
	"function"     reduce using rule 10
	"var"          reduce using rule 10
	"type"         reduce using rule 10
	"then"         reduce using rule 10
	"else"         reduce using rule 10
	"do"           reduce using rule 10
	","            reduce using rule 10
	";"            reduce using rule 10
	")"            reduce using rule 10
	"]"            reduce using rule 10
	"+"            reduce using rule 10
	"-"            reduce using rule 10
	"*"            reduce using rule 10
	"/"            reduce using rule 10
	"="            reduce using rule 10
	"<>"           reduce using rule 10
	"<="           reduce using rule 10
	">="           reduce using rule 10
	"<"            reduce using rule 10
	">"            reduce using rule 10
	"&"            reduce using rule 10
	"|"            reduce using rule 10
	%eof           reduce using rule 10


State 7

	exp -> record_create .                              (rule 11)

	"to"           reduce using rule 11
	"in"           reduce using rule 11
	"end"          reduce using rule 11
	"function"     reduce using rule 11
	"var"          reduce using rule 11
	"type"         reduce using rule 11
	"then"         reduce using rule 11
	"else"         reduce using rule 11
	"do"           reduce using rule 11
	","            reduce using rule 11
	";"            reduce using rule 11
	")"            reduce using rule 11
	"]"            reduce using rule 11
	"+"            reduce using rule 11
	"-"            reduce using rule 11
	"*"            reduce using rule 11
	"/"            reduce using rule 11
	"="            reduce using rule 11
	"<>"           reduce using rule 11
	"<="           reduce using rule 11
	">="           reduce using rule 11
	"<"            reduce using rule 11
	">"            reduce using rule 11
	"&"            reduce using rule 11
	"|"            reduce using rule 11
	%eof           reduce using rule 11


State 8

	exp -> array_create .                               (rule 12)

	"to"           reduce using rule 12
	"in"           reduce using rule 12
	"end"          reduce using rule 12
	"function"     reduce using rule 12
	"var"          reduce using rule 12
	"type"         reduce using rule 12
	"then"         reduce using rule 12
	"else"         reduce using rule 12
	"do"           reduce using rule 12
	","            reduce using rule 12
	";"            reduce using rule 12
	")"            reduce using rule 12
	"]"            reduce using rule 12
	"+"            reduce using rule 12
	"-"            reduce using rule 12
	"*"            reduce using rule 12
	"/"            reduce using rule 12
	"="            reduce using rule 12
	"<>"           reduce using rule 12
	"<="           reduce using rule 12
	">="           reduce using rule 12
	"<"            reduce using rule 12
	">"            reduce using rule 12
	"&"            reduce using rule 12
	"|"            reduce using rule 12
	%eof           reduce using rule 12


State 9

	exp -> lvalue .                                     (rule 2)
	exp -> lvalue . ":=" exp                            (rule 13)
	lvalue -> lvalue . "(" exp ")"                      (rule 68)
	lvalue -> lvalue . "." ident                        (rule 69)

	"to"           reduce using rule 2
	"in"           reduce using rule 2
	"end"          reduce using rule 2
	"function"     reduce using rule 2
	"var"          reduce using rule 2
	"type"         reduce using rule 2
	"then"         reduce using rule 2
	"else"         reduce using rule 2
	"do"           reduce using rule 2
	","            reduce using rule 2
	";"            reduce using rule 2
	"("            shift, and enter state 30
	")"            reduce using rule 2
	"]"            reduce using rule 2
	"."            shift, and enter state 31
	"+"            reduce using rule 2
	"-"            reduce using rule 2
	"*"            reduce using rule 2
	"/"            reduce using rule 2
	"="            reduce using rule 2
	"<>"           reduce using rule 2
	"<="           reduce using rule 2
	">="           reduce using rule 2
	"<"            reduce using rule 2
	">"            reduce using rule 2
	":="           shift, and enter state 32
	"&"            reduce using rule 2
	"|"            reduce using rule 2
	%eof           reduce using rule 2


State 10

	exp -> "while" . exp "do" exp                       (rule 16)

	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 16
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	"("            shift, and enter state 19

	exp            goto state 29
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	array_create   goto state 8
	lvalue         goto state 9

State 11

	exp -> "for" . ident ":=" exp "to" exp "do" exp     (rule 17)

	ident          shift, and enter state 28


State 12

	exp -> "break" .                                    (rule 18)

	"to"           reduce using rule 18
	"in"           reduce using rule 18
	"end"          reduce using rule 18
	"function"     reduce using rule 18
	"var"          reduce using rule 18
	"type"         reduce using rule 18
	"then"         reduce using rule 18
	"else"         reduce using rule 18
	"do"           reduce using rule 18
	","            reduce using rule 18
	";"            reduce using rule 18
	")"            reduce using rule 18
	"]"            reduce using rule 18
	"+"            reduce using rule 18
	"-"            reduce using rule 18
	"*"            reduce using rule 18
	"/"            reduce using rule 18
	"="            reduce using rule 18
	"<>"           reduce using rule 18
	"<="           reduce using rule 18
	">="           reduce using rule 18
	"<"            reduce using rule 18
	">"            reduce using rule 18
	"&"            reduce using rule 18
	"|"            reduce using rule 18
	%eof           reduce using rule 18


State 13

	exp -> "let" . decs "in" exp "end"                  (rule 19)

	"in"           reduce using rule 40
	"function"     reduce using rule 40
	"var"          reduce using rule 40
	"type"         reduce using rule 40

	decs           goto state 27

State 14

	exp -> "if" . exp "then" exp "else" exp             (rule 14)
	exp -> "if" . exp "then" exp                        (rule 15)

	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 16
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	"("            shift, and enter state 19

	exp            goto state 26
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	array_create   goto state 8
	lvalue         goto state 9

State 15

	exp -> "nil" .                                      (rule 3)

	"to"           reduce using rule 3
	"in"           reduce using rule 3
	"end"          reduce using rule 3
	"function"     reduce using rule 3
	"var"          reduce using rule 3
	"type"         reduce using rule 3
	"then"         reduce using rule 3
	"else"         reduce using rule 3
	"do"           reduce using rule 3
	","            reduce using rule 3
	";"            reduce using rule 3
	")"            reduce using rule 3
	"]"            reduce using rule 3
	"+"            reduce using rule 3
	"-"            reduce using rule 3
	"*"            reduce using rule 3
	"/"            reduce using rule 3
	"="            reduce using rule 3
	"<>"           reduce using rule 3
	"<="           reduce using rule 3
	">="           reduce using rule 3
	"<"            reduce using rule 3
	">"            reduce using rule 3
	"&"            reduce using rule 3
	"|"            reduce using rule 3
	%eof           reduce using rule 3


State 16

	funcall -> ident . "(" explist ")"                  (rule 21)
	record_create -> ident . "(" record_create_list ")"    (rule 34)
	array_create -> ident . "[" exp "]" "of" exp        (rule 39)
	lvalue -> ident .                                   (rule 66)
	lvalue -> ident . "(" exp ")"                       (rule 67)

	"to"           reduce using rule 66
	"in"           reduce using rule 66
	"end"          reduce using rule 66
	"function"     reduce using rule 66
	"var"          reduce using rule 66
	"type"         reduce using rule 66
	"then"         reduce using rule 66
	"else"         reduce using rule 66
	"do"           reduce using rule 66
	","            reduce using rule 66
	";"            reduce using rule 66
	"("            shift, and enter state 24
			(reduce using rule 66)

	")"            reduce using rule 66
	"["            shift, and enter state 25
	"]"            reduce using rule 66
	"."            reduce using rule 66
	"+"            reduce using rule 66
	"-"            reduce using rule 66
	"*"            reduce using rule 66
	"/"            reduce using rule 66
	"="            reduce using rule 66
	"<>"           reduce using rule 66
	"<="           reduce using rule 66
	">="           reduce using rule 66
	"<"            reduce using rule 66
	">"            reduce using rule 66
	":="           reduce using rule 66
	"&"            reduce using rule 66
	"|"            reduce using rule 66
	%eof           reduce using rule 66


State 17

	exp -> int_literal .                                (rule 5)

	"to"           reduce using rule 5
	"in"           reduce using rule 5
	"end"          reduce using rule 5
	"function"     reduce using rule 5
	"var"          reduce using rule 5
	"type"         reduce using rule 5
	"then"         reduce using rule 5
	"else"         reduce using rule 5
	"do"           reduce using rule 5
	","            reduce using rule 5
	";"            reduce using rule 5
	")"            reduce using rule 5
	"]"            reduce using rule 5
	"+"            reduce using rule 5
	"-"            reduce using rule 5
	"*"            reduce using rule 5
	"/"            reduce using rule 5
	"="            reduce using rule 5
	"<>"           reduce using rule 5
	"<="           reduce using rule 5
	">="           reduce using rule 5
	"<"            reduce using rule 5
	">"            reduce using rule 5
	"&"            reduce using rule 5
	"|"            reduce using rule 5
	%eof           reduce using rule 5


State 18

	exp -> string_literal .                             (rule 6)

	"to"           reduce using rule 6
	"in"           reduce using rule 6
	"end"          reduce using rule 6
	"function"     reduce using rule 6
	"var"          reduce using rule 6
	"type"         reduce using rule 6
	"then"         reduce using rule 6
	"else"         reduce using rule 6
	"do"           reduce using rule 6
	","            reduce using rule 6
	";"            reduce using rule 6
	")"            reduce using rule 6
	"]"            reduce using rule 6
	"+"            reduce using rule 6
	"-"            reduce using rule 6
	"*"            reduce using rule 6
	"/"            reduce using rule 6
	"="            reduce using rule 6
	"<>"           reduce using rule 6
	"<="           reduce using rule 6
	">="           reduce using rule 6
	"<"            reduce using rule 6
	">"            reduce using rule 6
	"&"            reduce using rule 6
	"|"            reduce using rule 6
	%eof           reduce using rule 6


State 19

	exp -> "(" . ")"                                    (rule 4)
	exp -> "(" . expseq ")"                             (rule 20)

	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 16
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	"("            shift, and enter state 19
	")"            shift, and enter state 23

	exp            goto state 21
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	array_create   goto state 8
	expseq         goto state 22
	lvalue         goto state 9

State 20

	%start_tigerParser -> program .                     (rule 0)

	%eof           accept


State 21

	arith_exp -> exp . "+" exp                          (rule 22)
	arith_exp -> exp . "-" exp                          (rule 23)
	arith_exp -> exp . "*" exp                          (rule 24)
	arith_exp -> exp . "/" exp                          (rule 25)
	comp_exp -> exp . "=" exp                           (rule 26)
	comp_exp -> exp . "<>" exp                          (rule 27)
	comp_exp -> exp . "<" exp                           (rule 28)
	comp_exp -> exp . ">" exp                           (rule 29)
	comp_exp -> exp . "<=" exp                          (rule 30)
	comp_exp -> exp . ">=" exp                          (rule 31)
	bool_exp -> exp . "&" exp                           (rule 32)
	bool_exp -> exp . "|" exp                           (rule 33)
	expseq -> exp .                                     (rule 61)

	";"            reduce using rule 61
	")"            reduce using rule 61
	"+"            shift, and enter state 33
	"-"            shift, and enter state 34
	"*"            shift, and enter state 35
	"/"            shift, and enter state 36
	"="            shift, and enter state 37
	"<>"           shift, and enter state 38
	"<="           shift, and enter state 39
	">="           shift, and enter state 40
	"<"            shift, and enter state 41
	">"            shift, and enter state 42
	"&"            shift, and enter state 43
	"|"            shift, and enter state 44


State 22

	exp -> "(" expseq . ")"                             (rule 20)
	expseq -> expseq . ";" exp                          (rule 62)

	";"            shift, and enter state 77
	")"            shift, and enter state 78


State 23

	exp -> "(" ")" .                                    (rule 4)

	"to"           reduce using rule 4
	"in"           reduce using rule 4
	"end"          reduce using rule 4
	"function"     reduce using rule 4
	"var"          reduce using rule 4
	"type"         reduce using rule 4
	"then"         reduce using rule 4
	"else"         reduce using rule 4
	"do"           reduce using rule 4
	","            reduce using rule 4
	";"            reduce using rule 4
	")"            reduce using rule 4
	"]"            reduce using rule 4
	"+"            reduce using rule 4
	"-"            reduce using rule 4
	"*"            reduce using rule 4
	"/"            reduce using rule 4
	"="            reduce using rule 4
	"<>"           reduce using rule 4
	"<="           reduce using rule 4
	">="           reduce using rule 4
	"<"            reduce using rule 4
	">"            reduce using rule 4
	"&"            reduce using rule 4
	"|"            reduce using rule 4
	%eof           reduce using rule 4


State 24

	funcall -> ident "(" . explist ")"                  (rule 21)
	record_create -> ident "(" . record_create_list ")"    (rule 34)
	lvalue -> ident "(" . exp ")"                       (rule 67)

	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 76
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	","            reduce using rule 63
			(reduce using rule 35)

	"("            shift, and enter state 19
	")"            reduce using rule 63
			(reduce using rule 35)


	exp            goto state 72
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	record_create_listgoto state 73
	record_create_fieldgoto state 74
	array_create   goto state 8
	explist        goto state 75
	lvalue         goto state 9

State 25

	array_create -> ident "[" . exp "]" "of" exp        (rule 39)

	"while"        shift, and enter state 10
	"for"          shift, and enter state 11
	"break"        shift, and enter state 12
	"let"          shift, and enter state 13
	"if"           shift, and enter state 14
	"nil"          shift, and enter state 15
	ident          shift, and enter state 16
	int_literal    shift, and enter state 17
	string_literal shift, and enter state 18
	"("            shift, and enter state 19

	exp            goto state 71
	funcall        goto state 3
	arith_exp      goto state 4
	comp_exp       goto state 5
	bool_exp       goto state 6
	record_create  goto state 7
	array_create   goto state 8
	lvalue         goto state 9

State 26

	exp -> "if" exp . "then" exp "else" exp             (rule 14)
	exp -> "if" exp . "then" exp                        (rule 15)
	arith_exp -> exp . "+" exp                          (rule 22)
	arith_exp -> exp . "-" exp                          (rule 23)
	arith_exp -> exp . "*" exp                          (rule 24)
	arith_exp -> exp . "/" exp                          (rule 25)
	comp_exp -> exp . "=" exp                           (rule 26)
	comp_exp -> exp . "<>" exp                          (rule 27)
	comp_exp -> exp . "<" exp                           (rule 28)
	comp_exp -> exp . ">" exp                           (rule 29)
	comp_exp -> exp . "<=" exp                          (rule 30)
	comp_exp -> exp . ">=" exp                          (rule 31)
	bool_exp -> exp . "&" exp                           (rule 32)
	bool_exp -> exp . "|" exp                           (rule 33)

	"then"         shift, and enter state 70
	"+"            shift, and enter state 33
	"-"            shift, and enter state 34
	"*"            shift, and enter state 35
	"/"            shift, and enter state 36
	"="            shift, and enter state 37
	"<>"           shift, and enter state 38
	"<="           shift, and enter state 39
	">="           shift, and enter state 40
	"<"            shift, and enter state 41
	">"            shift, and enter state 42
	"&"            shift, and enter state 43
	"|"            shift, and enter state 44


State 27

	exp -> "let" decs . "in" exp "end"                  (rule 19)
	decs -> decs . dec                                  (rule 41)
